--- a/app/templates/agenda/documents.hbs
+++ b/app/templates/agenda/documents.hbs
@@ -51,36 +51,31 @@
   </div>
 </div>
 
-{{#if this.isOpenPieceUploadModal}}
-  <WebComponents::VlModal
-    @onClose={{perform this.cancelUploadPieces}}
-    @isOverlay={{true}}
-    @large={{true}}
-    @title={{t "documents-add"}} >
-    <Auk::Modal::Body>
-      <Auk::FileUploader
-        @multiple={{true}}
-        @reusable={{true}}
-        @onUpload={{this.uploadPiece}}
-      />
-      <div class="upload-container">
-        {{#each this.newPieces as |piece|}}
-          <Documents::UploadedDocument
-            @piece={{piece}}
-            @allowDocumentContainerEdit={{true}}
-            @onDelete={{perform this.deletePiece piece}} />
-        {{/each}}
-      </div>
-    </Auk::Modal::Body>
-    <WebComponents::VlModalFooter
-      @isLoading={{this.savePieces.isRunning}}
-      @cancelButtonText={{t "cancel"}}
-      @saveButtonText={{t "documents-add"}}
-      @cancelAction={{perform this.cancelUploadPieces}}
-      @saveAction={{perform this.savePieces}}
-      @disableSave={{eq this.newPieces.length 0}} />
-  </WebComponents::VlModal>
-{{/if}}
+<ConfirmationModal
+  @modalOpen={{this.isOpenPieceUploadModal}}
+  @title={{t "documents-add"}}
+  @onConfirm={{perform this.savePieces}}
+  @onCancel={{perform this.cancelUploadPieces}}
+  @confirmMessage={{t "documents-add"}}
+  @disabled={{eq this.newPieces.length 0}}
+  @loading={{this.savePieces.isRunning}}
+>
+  <:body>
+    <Auk::FileUploader
+      @multiple={{true}}
+      @reusable={{true}}
+      @onUpload={{this.uploadPiece}}
+    />
+    <div class="upload-container">
+      {{#each this.newPieces as |piece|}}
+        <Documents::UploadedDocument
+          @piece={{piece}}
+          @allowDocumentContainerEdit={{true}}
+          @onDelete={{perform this.deletePiece piece}} />
+      {{/each}}
+    </div>
+  </:body>
+</ConfirmationModal>
 
 {{#if this.isOpenBatchDetailsModal}}
   <Documents::BatchDetails::BatchDocumentsDetailsModal
