--- a/app/styles/addon-overrides/_ember-tooltip.scss
+++ b/app/styles/addon-overrides/_ember-tooltip.scss
@@ -102,3 +102,7 @@
 .ember-tooltip[x-placement^="left"] .ember-tooltip-arrow {
   border-left-color: #3a3c47;
 }
+
+.ember-popover {
+  padding: 0 0 0 0;
+}
